# river_dreams

./: .editorconfig  .gitignore  Cargo.toml  README.md  README_pt-BR.md
src/: command_line.rs  datetime.rs  error.rs  format.rs  git.rs  main.rs  metadata.rs  time.rs
src/file_system/: mod.rs  path.rs
src/file_system/directory/: entry.rs  mod.rs
src/hardware/: battery.rs  disk.rs  mod.rs
src/prompt/: left.rs  mod.rs  right.rs
