[package]
name = "river_dreams"
description = "A tribal looking ZSH shell theme made to help you craft your most ambitious software projects. It is available for macOS and Linux."
version = "13.0.16"
license = "BSD-3-Clause"
edition = "2024"
authors = ["Sherman Rofeman <skippyr.developer@icloud.com>"]
homepage = "https://github.com/skippyr/river_dreams"
keywords = ["shell", "zsh", "cli", "shell-theme", "terminal"]
categories = ["command-line-utilities", "development-tools"]

[dependencies]
battery = "0.7.8"
chrono = "0.4.39"
crossterm = "0.29.0"
git2 = "0.20.0"
libc = "0.2.169"
local-ip-address = "0.6.3"
num-format = "0.4.4"
open = "5.3.2"
